# RAG

./: .gitignore  pyproject.toml
helpers/: embedding.py  files.py  processing.py  retriever.py
main_scripts/: answer.py  ingest.py
